gitops/clusters/de/hetzner/cluster/apps/otel-collector/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: otel-collector
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
